--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Рекламное агентство</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -27,11 +28,20 @@
 
         <section id="services">
             <h2>Наши услуги</h2>
-            <ul>
-                <li>Реклама на транспорте</li>
-                <li>Создание брендированного контента</li>
-                <li>Анализ эффективности рекламы</li>
-            </ul>
+            <div class="service-cards">
+                <div class="card">
+                    <h3>Реклама на транспорте</h3>
+                    <p>Яркие и заметные рекламные кампании на автомобилях и автобусах.</p>
+                </div>
+                <div class="card">
+                    <h3>Создание брендированного контента</h3>
+                    <p>Разработка уникальных материалов для продвижения бренда.</p>
+                </div>
+                <div class="card">
+                    <h3>Анализ эффективности рекламы</h3>
+                    <p>Подробный анализ и рекомендации для улучшения стратегий.</p>
+                </div>
+            </div>
         </section>
 
         <section id="portfolio">
@@ -46,7 +56,7 @@
 
         <section id="contact">
             <h2>Контакты</h2>
-            <p>Свяжитесь с нами: glowmo.com</p>
+            <p>Свяжитесь с нами: example@example.com</p>
         </section>
     </main>
 
