Обновление стилей и HTML для улучшенного дизайна

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
         <section id="contact">
             <h2>Контакты</h2>
-            <p>Свяжитесь с нами: example@example.com</p>
+            <p>Свяжитесь с нами: glowmo.com</p>
         </section>
     </main>
 
